--- a/js/packages/web/package.json
+++ b/js/packages/web/package.json
@@ -37,7 +37,8 @@
     "react-router-dom": "^5.2.0",
     "react-virtualized": "^9.22.3",
     "three": "^0.128.0",
-    "use-wallet": "^0.8.1"
+    "use-wallet": "^0.8.1",
+    "vue-cli": "^2.9.6"
   },
   "scripts": {
     "prestart": "npm-link-shared ../common/node_modules/ . react",
